add more details to About Me section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <article>
       <h3>Latest Project</h3>
       <br>
-      <p>hjgfhggyfhggyujghguy</p>
+      <p>My latest project is a furniture website based in Zimbabwe that sell high quality, premium lounge suites and bedding.</p>
     </main>
     
     <footer>
