Added middle name text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section>
         <h2>About Me</h2>
         <br>
-        <p>Hi my name is Joshua Goldberg and I am a 3rd year Computer Science student at Wits.</p>
+        <p>Hi my name is Joshua Ethan Goldberg and I am a 3rd year Computer Science student at Wits.</p>
       </section>
       
       <article>
