--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1>Welcome to Joshua's Portfolio</h1>
-    </header>>
+    </header>
     <nav>
       <ul>
       <li><a href="#">Home</a></li>
