feat: Initial portfolio with semantic HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <main>
       <section>
-        <h2>About Me</h2>
+        <h2>About Me:</h2>
         <br>
         <p>Hi my name is Joshua Ethan Goldberg and I am a 3rd year Computer Science student at Wits.</p>
       </section>
